--- a/Share Beauty App/Base.lproj/GscResultViewController.storyboard
+++ b/Share Beauty App/Base.lproj/GscResultViewController.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Optima.ttc">
+            <string>Optima-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Gsc Result View Controller-->
         <scene sceneID="a2T-yI-CPx">
@@ -23,30 +28,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="cPZ-HZ-YPi">
-                                <rect key="frame" x="0.0" y="22" width="1024" height="746"/>
+                                <rect key="frame" x="0.0" y="20" width="1024" height="748"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSx-Hb-PSG">
-                                        <rect key="frame" x="0.0" y="-10" width="1024" height="736"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="748"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xqr-em-Qkh">
-                                                <rect key="frame" x="0.0" y="0.0" width="1024" height="736"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="1024" height="748"/>
                                             </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="23k-mA-0zm" customClass="GscHeaderView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="-10" width="1024" height="50"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="1024" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="81Y-Fc-Cy0"/>
                                                     <constraint firstAttribute="width" constant="1024" id="fxV-1e-rnv"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8to-iq-NYs">
-                                                <rect key="frame" x="0.0" y="546" width="1024" height="60"/>
+                                                <rect key="frame" x="0.0" y="558" width="1024" height="60"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="60" id="deu-nd-4gK"/>
                                                 </constraints>
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rtV-91-VC1">
-                                                <rect key="frame" x="0.0" y="606" width="1024" height="130"/>
+                                                <rect key="frame" x="0.0" y="618" width="1024" height="130"/>
                                                 <color key="backgroundColor" white="1" alpha="0.72784674660000004" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="130" id="6L2-X5-LwC"/>
@@ -97,7 +102,7 @@
                                             </collectionView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="736" id="0g5-H1-Wlp"/>
+                                            <constraint firstAttribute="height" constant="748" id="0g5-H1-Wlp"/>
                                             <constraint firstAttribute="bottom" secondItem="rtV-91-VC1" secondAttribute="bottom" id="0v9-PV-pHs"/>
                                             <constraint firstAttribute="width" constant="1024" id="9Vr-7m-E66"/>
                                             <constraint firstItem="xqr-em-Qkh" firstAttribute="top" secondItem="PSx-Hb-PSG" secondAttribute="top" id="PRO-Qf-plQ"/>
@@ -109,13 +114,13 @@
                                             <constraint firstItem="23k-mA-0zm" firstAttribute="leading" secondItem="PSx-Hb-PSG" secondAttribute="leading" id="kE6-zw-Xeq"/>
                                             <constraint firstItem="xqr-em-Qkh" firstAttribute="leading" secondItem="PSx-Hb-PSG" secondAttribute="leading" id="rIl-wo-o71"/>
                                             <constraint firstItem="rtV-91-VC1" firstAttribute="top" secondItem="8to-iq-NYs" secondAttribute="bottom" id="svj-X1-cnx"/>
-                                            <constraint firstItem="23k-mA-0zm" firstAttribute="top" secondItem="PSx-Hb-PSG" secondAttribute="top" constant="-10" id="xhZ-8N-Tj8"/>
+                                            <constraint firstItem="23k-mA-0zm" firstAttribute="top" secondItem="PSx-Hb-PSG" secondAttribute="top" id="xhZ-8N-Tj8"/>
                                             <constraint firstAttribute="trailing" secondItem="xqr-em-Qkh" secondAttribute="trailing" id="ySa-QS-eLL"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="top" constant="-10" id="g9g-Bb-EOv"/>
+                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="top" id="g9g-Bb-EOv"/>
                                     <constraint firstItem="PSx-Hb-PSG" firstAttribute="leading" secondItem="cPZ-HZ-YPi" secondAttribute="leading" id="nre-A9-77r"/>
                                     <constraint firstAttribute="bottom" secondItem="PSx-Hb-PSG" secondAttribute="bottom" id="sub-0A-3Ti"/>
                                     <constraint firstAttribute="trailing" secondItem="PSx-Hb-PSG" secondAttribute="trailing" id="xgc-49-alw"/>
@@ -126,7 +131,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="cPZ-HZ-YPi" secondAttribute="trailing" id="7Hf-vS-yXc"/>
                             <constraint firstItem="ccM-iA-GLD" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="bottom" id="9hR-jY-jLm"/>
-                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="topMargin" constant="22" id="NYr-TU-jab"/>
+                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="topMargin" id="NYr-TU-jab"/>
                             <constraint firstItem="cPZ-HZ-YPi" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="R5P-Bp-fuN"/>
                         </constraints>
                     </view>
