--- a/Share Beauty App/Base.lproj/LuxuryYutakaViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LuxuryYutakaViewController.storyboard
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -34,7 +33,7 @@
                                         <rect key="frame" x="0.0" y="-10" width="1024" height="736"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3V7-tT-FXW">
-                                                <rect key="frame" x="0.0" y="0.0" width="1024" height="746"/>
+                                                <rect key="frame" x="0.0" y="10" width="1024" height="746"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="746" id="N0j-7V-zXN"/>
                                                     <constraint firstAttribute="width" constant="1024" id="eMF-Hb-lNV"/>
@@ -260,7 +259,7 @@
                                             <constraint firstAttribute="trailing" secondItem="CgF-nl-ENQ" secondAttribute="trailing" id="3Yl-JD-flF"/>
                                             <constraint firstItem="RR6-h1-p8q" firstAttribute="top" secondItem="MYy-MR-lMB" secondAttribute="bottom" constant="5" identifier="id13" id="5DA-QN-hGi"/>
                                             <constraint firstItem="gat-Vx-fyZ" firstAttribute="top" secondItem="FyJ-i5-PGf" secondAttribute="bottom" id="8Sk-5F-wkC"/>
-                                            <constraint firstItem="3V7-tT-FXW" firstAttribute="top" secondItem="PSx-Hb-PSG" secondAttribute="top" id="9R9-Se-KLf"/>
+                                            <constraint firstItem="3V7-tT-FXW" firstAttribute="top" secondItem="PSx-Hb-PSG" secondAttribute="top" constant="10" id="9R9-Se-KLf"/>
                                             <constraint firstItem="FyJ-i5-PGf" firstAttribute="top" secondItem="0uv-zC-qpm" secondAttribute="bottom" constant="45" id="9a4-tA-xvr"/>
                                             <constraint firstItem="MYy-MR-lMB" firstAttribute="top" secondItem="CgF-nl-ENQ" secondAttribute="bottom" constant="5" identifier="id12" id="Ajp-3w-xzd"/>
                                             <constraint firstItem="CgF-nl-ENQ" firstAttribute="top" secondItem="gat-Vx-fyZ" secondAttribute="bottom" constant="5" identifier="id11" id="AtW-0k-J5C"/>
@@ -316,7 +315,7 @@
                             <constraint firstItem="ccM-iA-GLD" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="bottom" id="9hR-jY-jLm"/>
                             <constraint firstItem="8d6-qh-ycf" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="top" constant="22" id="JKO-of-28Y"/>
                             <constraint firstItem="8d6-qh-ycf" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="KFC-zC-fr9"/>
-                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="topMargin" constant="22" id="NYr-TU-jab"/>
+                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="top" constant="22" id="NYr-TU-jab"/>
                             <constraint firstItem="cPZ-HZ-YPi" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="R5P-Bp-fuN"/>
                             <constraint firstItem="dju-oC-MUz" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="Y7d-xH-4vv"/>
                             <constraint firstAttribute="trailing" secondItem="dju-oC-MUz" secondAttribute="trailing" id="dzO-J9-zVT"/>
